<resources>
    <string name="app_name">Semarang Food Finder</string>
    <string name="no_data">No favorite so far</string>
    <string name="error">Something is Wrong..</string>
    <string name="menu_home">Home</string>
    <string name="search_hint">What do you want to eat?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="recipe_image_desc">recipe_image</string>
    <string name="text_subtitle">This is the subtitle Text</string>
    <string name="favorite">Favorite Menu</string>
    <string name="detailView_label">DetailRecipeActivity</string>
    <string name="title_favorite">Favorite</string>
    <string name="favorite_menu">Favorite</string>
    <string name="directions_title">Directions</string>
    <string name="ingredients_title">Ingredients</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="details_title">Restaurant Details</string>
    <string name="no_reviews">No Reviews so far</string>
    <string name="profile_title">Profile</string>
    <string name="no_menu_available">No Menu Available</string>
    <string name="resto_name">Resto Name</string>
    <string name="resto_categories">Categories</string>
    <string name="resto_location">Location</string>
    <string name="btn_submit">Submit</string>
    <string name="comments_placeholder">Comments Here..</string>
    <string name="write_a_review_title">Write a Review</string>
    <string name="add_photos_title">Add Photos</string>
    <string name="rating_page_title">How Would You Rate This Restaurant</string>
    <string name="review_img_title">Img Title</string>
    <string name="operational_hours">Operational hours</string>
    <string name="resto_phone">phone</string>
    <string name="halal">halal</string>
    <string name="location_detail">location detail</string>
    <string name="menu_title">Menu</string>
    <string name="login_title">LOGIN.</string>
    <string name="subtitle_login">Welcome back! Ready to explore?</string>
    <string name="email_label">Email</string>
    <string name="login_button">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_here"><u>Register Here</u></string>
    <string name="logo_description">sff_logo</string>
    <string name="error_login_msg">Wrong Email or Password</string>
    <string name="price_default">99999</string>
    <string name="icon_recommended_desc">icon recommended</string>
    <string name="phone_number_label">Phone Number</string>
    <string name="address_label">Address</string>
    <string name="full_name_label">Full Name</string>
    <string name="register_greetings">Oh hi! Please fill your details to continue.</string>
    <string name="register_label">REGISTER</string>
    <string name="password_label">Password</string>
    <string name="category_name_title">Category Name</string>
    <string name="update_profile_label">Update Profile</string>
    <string name="show_in_maps">Show in Maps</string>
    <string name="cannot_find_what_you_are_looking_for">Cannot Find What You are looking for</string>
    <string name="free_wifi">Free Wifi</string>
    <string name="toilets">Toilets</string>
    <string name="musholla">Musholla</string>
    <string name="power_outlets">Power Outlets</string>
    <string name="view_detail">View Detail</string>
    <string name="see_reviews">See Reviews</string>
    <string name="open_maps">Open Maps</string>
    <string name="review_history">Review History</string>
    <string name="review_title">Reviews</string>
    <string name="edit_review">Edit Review</string>

</resources>